# retro-photo-backend

./: .gitignore  DEPENDENCY_SECURITY_IMPLEMENTATION_GUIDE.md  DEPENDENCY_VULNERABILITY_ANALYSIS.md  ENHANCEMENT_VALIDATION.py  GFPGAN_VERSION_REPORT.md  MANIFEST.in  PATH_VALIDATION_FIX_TEST.py  PATH_VALIDATOR_EDGE_CASE_TESTS.py  PHASE2_IMPLEMENTATION_TEST.py  PHASE2_STATUS_UPDATE.md  PHASE2_SYNTAX_VALIDATION.py  README.md  SECURITY_AUDIT_REPORT.md  SECURITY_IMPLEMENTATION_COMPLETE.md  SECURITY_UX_FIX_TEST.py  TECHNICAL_PHASE_ANALYSIS.md  TEST_CLI_COMMANDS.py  WEB_API_SECURITY_ASSESSMENT.md  WEB_API_TECHNICAL_ANALYSIS.md  coverage.json  cross_platform_assessment.py  cross_platform_assessment_darwin_arm64.json  portable_setup.sh  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  secure_api_implementation.py  security_monitoring.py  setup.py  test_api_security.py
.claude/: settings.local.json
photo_restore/: __init__.py  cli.py  cli_prototype.py
photo_restore/config/: default.yaml
photo_restore/models/: model_manager.py
photo_restore/processors/: __init__.py  batch_processor.py  image_processor.py
photo_restore/utils/: __init__.py  config.py  cpu_optimizer.py  esrgan_debug.py  face_detection.py  file_utils.py  image_utils.py  logger.py  model_loader.py  torch_compat.py
security_patches/: README.md  dependency_security.py  path_validator.py  secure_image_validator.py  secure_model_loader.py  security_test_suite.py  test_dependency_security.py
tests/: README.md  __init__.py  conftest.py  test_batch_processor.py  test_cli.py  test_cli_gfpgan_validation.py  test_config.py  test_config_comprehensive.py  test_coverage.py  test_error_handling.py  test_file_utils.py  test_gfpgan_phase2_comparison.py  test_image_processor.py  test_logger.py  test_model_manager.py  test_performance.py
tests/fixtures/: test_images.py
tests/mocks/: __init__.py  ai_models.py
